connect-flash is working - 20 Sep 2018

--- a/views/notes/index.handlebars
+++ b/views/notes/index.handlebars
@@ -1,9 +1,9 @@
 {{#each notes}}
 <div class="card card-body mb-2">
-  <h3 class="">{{title}}</h3>
+  <h4 class="alert alert-secondary">{{title}}</h4>
   <p class="badge">{{date}}</p>
   <div class="">
-    <pre><code>{{details}}</code></pre>
+    <pre><code class="">{{details}}</code></pre>
   </div>
   <div class="btn-holder row">
     <div class="col-md-6 mb-2">
