Login ongoing - 20 Sep 2018

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,4 +1,4 @@
-<h1 class="display-3 text-success text-center">
+<h1 class="display-3 text-secondary text-center">
   About
 </h1>
 <p class="lead text-center">An Application built with Node, Express and Mongo DB</p>
