--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,7 @@
 <div class="jumbotron text-center">
-  <h1 class="display-3 text-success">
+  <h1 class="text-center"><i class="fa fa-google-wallet fa-5x" aria-hidden="true"></i></h1>
+
+  <h1 class="display-3 text-secondary">
     {{title}}
   </h1>
   <p class="lead">A SASS Application for Your Personal Notes & Code Snippets</p>
