--- a/views/notes/edit.handlebars
+++ b/views/notes/edit.handlebars
@@ -12,6 +12,6 @@
     <div class="form-group">
       <textarea type="text" class="form-control" name="details" rows="15" placeholder="Note Details" required>{{note.details}}</textarea>
     </div>
-    <button class="btn btn-success" type="submit">Submit</button>
+    <button class="btn btn-secondary btn-block" type="submit">Submit</button>
   </form>
 </div>
