--- a/views/notes/add.handlebars
+++ b/views/notes/add.handlebars
@@ -11,6 +11,6 @@
     <div class="form-group">
       <textarea type="text" class="form-control" name="details" rows="10" placeholder="Note Details" required></textarea>
     </div>
-    <button class="btn btn-success" type="submit">Submit</button>
+    <button class="btn btn-secondary btn-block" type="submit">Submit</button>
   </form>
 </div>
