--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,13 +1,14 @@
 <div class="row">
   <div class="col-md-6 mx-auto">
     <div class="card card-body">
-      <h3 class="text-center text-success">
+      <h1 class="text-center"><i class="fa fa-google-wallet fa-3x" aria-hidden="true"></i></h1>
+      <h3 class="text-center text-secondary">
         Account Login
       </h3>
       <form action="">
         <input type="email" name="email" id="email" class="form-control mb-2" placeholder="Enter Email Address" />
         <input type="password" name="password" id="password" class="form-control mb-2" placeholder="Enter Password" />
-        <input type="submit" value="Submit" class="btn btn-success btn-block">
+        <input type="submit" value="Submit" class="btn btn-secondary btn-block">
       </form>
     </div>
   </div>
