Route Protection done - 21 Sep 2018

--- a/_scss/index.scss
+++ b/_scss/index.scss
@@ -5,10 +5,15 @@
 
 /*=====  End of GLOBALS  ======*/
 /*=======================================
-=            HEADER & FOOTER            =
+=            LOGIN OUT FORM            =
 =======================================*/
-
-/*=====  End of HEADER & FOOTER  ======*/
+.login-out-form {
+  .card.card-body {
+    background-color: #e9ecef;
+    box-shadow: 2px 2px 6px gray;
+  }
+}
+/*=====  End of LOGIN OUT FROM  ======*/
 
 /** THE BODY ===========================  */
 // ul,
