--- a/public/index.css
+++ b/public/index.css
@@ -6105,9 +6105,13 @@ a {
 /*=====  End of MOBILE WHITE SPACE REMOVAL  ======*/
 /*=====  End of GLOBALS  ======*/
 /*=======================================
-=            HEADER & FOOTER            =
+=            LOGIN OUT FORM            =
 =======================================*/
-/*=====  End of HEADER & FOOTER  ======*/
+.login-out-form .card.card-body {
+  background-color: #e9ecef;
+  box-shadow: 2px 2px 6px gray; }
+
+/*=====  End of LOGIN OUT FROM  ======*/
 /** THE BODY ===========================  */
 .jumbotron {
   box-shadow: 2px 2px 6px gray; }
