--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,5 +5,6 @@
     {{title}}
   </h1>
   <p class="lead">A SASS Application for Your Personal Notes & Code Snippets</p>
+  <a href="/notes" class="btn btn-secondary btn-lg">My Notes</a>
   <a href="/notes/add" class="btn btn-dark btn-lg">Add Snippets</a>
 </div>
