--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -1,12 +1,13 @@
-<div class="row">
+<div class="row login-out-form">
   <div class="col-md-6 mx-auto">
     <div class="card card-body">
       <h1 class="text-center"><i class="fa fa-google-wallet fa-3x" aria-hidden="true"></i></h1>
       <h3 class="text-center text-secondary">
         Account Login
       </h3>
-      <form action="">
-        <input type="email" name="email" id="email" class="form-control mb-2" placeholder="Enter Email Address" />
+      <form method="post" action="/users/login">
+        <input type="email" name="email" id="email" class="form-control mb-2" placeholder="Enter Email Address"
+          required />
         <input type="password" name="password" id="password" class="form-control mb-2" placeholder="Enter Password" />
         <input type="submit" value="Submit" class="btn btn-secondary btn-block">
       </form>
